Prevent crash in APG when constraint is missing data

I'm not familliar enough with APG to properly assess if the fact noted on the
bug report, that amarok allows to generate an incomplete constraint, should be
fixed or not, but at least it shouldn't crash. So let's fix that.

BUG: 382456